# python

./: .pre-commit-config.yaml  README.md  pyproject.toml  pyscript.html  requirements.txt  test.html
src/cjs_tutorial/: __init__.py  cli.py  lib.py  plot.py
tests/: test_simple.py
