[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cjs_tutorial"
dynamic = ["version", "description"]
authors = [{name = "Chris Sewell", email = "chrisj_sewell@hotmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["tutorial"]
requires-python = ">=3.7"
dependencies = [
    "ipykernel",
    "matplotlib",
    "numpy",
    "scipy"
]

[project."optional-dependencies"]
testing = ["pytest"]

[tool.isort]
profile = "black"
force_sort_within_sections = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38
isolated_build = true

[testenv]
usedevleop = true

[testenv:py{37,38,39,310}]
description = Run pytest
extras = testing
commands = pytest {posargs}
"""
